--- a/public/reloader.html
+++ b/public/reloader.html
@@ -7,7 +7,7 @@ padding: 0px;
 margin: 0px;
 }
 
-#appframe { 
+#appframe {
 border: 0px;
 width: 100vw;
 height: 100vh;
@@ -16,8 +16,8 @@ margin: 0;
 }
 
         </style>
-        <script src="realoader.js">
-        
+        <script src="reloader.js">
+
         </script>
 
         <script>
